<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.englishpremierleague.Page2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#111C3C"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#111C3C"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="310dp"
                android:background="@drawable/tots" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/Q1_Badge"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="italic" />

            <RadioGroup
                android:id="@+id/RadioGrouptotts"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="#FFFFFF"
                    android:text="@string/Q1_CSKA"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="#FFFFFF"
                    android:text="@string/Q1_WestHam"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="#FFFFFF"
                    android:text="@string/Q1_Tots"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="#FFFFFF"
                    android:text="@string/Q1_Ars"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="#FFFFFF"
                    android:text="@string/Q1_CP"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/arsen" />

            <EditText
                android:id="@+id/manager_Name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0"
                android:gravity="center"
                android:hint="@string/Q2_ManagersName"
                android:inputType="textCapWords"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:text="There are only few clubs that have never relegated from Premier League. What are they?"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="italic" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/checkboxArsenal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/Q1_Ars"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:buttonTint="#FFFFFF" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/checkboxChelsea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/Q3_Chls"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:buttonTint="#FFFFFF" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/checkboxEverton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/Q3_EV"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:buttonTint="#FFFFFF" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/checkboxLiverpool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/Q3_Liver"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:buttonTint="#FFFFFF" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/checkboxMunt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/Q3_Mut"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:buttonTint="#FFFFFF" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/checkboxTotts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/Q1_Tots"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:buttonTint="#FFFFFF" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/checkboxMcity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/Q3_Mc"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:buttonTint="#FFFFFF" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/checkboxWham"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/Q1_WestHam"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:buttonTint="#FFFFFF"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/Q4_Text"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="italic" />

            <RadioGroup
                android:id="@+id/RadioGroupMut"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dp"
                    android:buttonTint="#FFFFFF"
                    android:text="@string/Q4_20"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dp"
                    android:buttonTint="#FFFFFF"
                    android:text="@string/Q4_25"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dp"
                    android:buttonTint="#FFFFFF"
                    android:text="@string/Q4_18"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dp"
                    android:buttonTint="#FFFFFF"
                    android:text="@string/Q4_13"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dp"
                    android:buttonTint="#FFFFFF"
                    android:text="@string/Q4_21"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
            </RadioGroup>
            <Button
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Final Submit" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
